# src/auth/auth.controller.ts
@@ -1,12 +1,24 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import { Body, Controller, Post, Res } from '@nestjs/common';
 import { AuthService } from './auth.service';
+import { Response } from 'express';
+import { SignupDto } from './dtos/signup.dto';
 
 @Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
-  @Post('sign-up')
-  async signUp() {}
+  @Post('signup')
+  async signUp(
+    @Body() dto: SignupDto,
+    @Res({ passthrough: true }) res: Response,
+  ) {
+    const token = await this.authService.signUp(dto);
+    res.cookie('token', token, {
+      httpOnly: true,
+      secure: true, // only over HTTPS in production
+    });
+    return { message: 'Signup successful' };
+  }
 
   @Post('login')
   async login() {}
